--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,6 +4,10 @@ DEFMT_LOG = "info"
 [build]
 target = "thumbv7em-none-eabihf"
 
+[target.'cfg(all(target_arch = "arm", target_os = "none"))']
+# (..)
+linker = "flip-link"
+
 [target.thumbv7em-none-eabihf]
 rustflags = [
   # cortex-m-rt linker script (will automatically pull in the memory.x file)
