--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "rust-analyzer.check.allTargets": false,
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "rust-lang.rust-analyzer"
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer"
+  },
+  "[toml]": {
+    "editor.defaultFormatter": "tamasfe.even-better-toml"
+  }
 }
