--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-cortex-m = {version = "0.7.7", features = [
-  "inline-asm", 
-  "critical-section-single-core"
-]}
+cortex-m = { version = "0.7.7", features = [
+  "inline-asm",
+  "critical-section-single-core",
+] }
 cortex-m-rt = "0.7.5"
 cortex-m-semihosting = "0.5.0"
 defmt = "1.0.1"
 defmt-semihosting = "0.3.0"
 panic-halt = "1.0.0"
+rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }
+stm32f4xx-hal = { version = "0.22.1", features = ["stm32f405"] }
