--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ defmt = "1.0.1"
 defmt-semihosting = "0.3.0"
 panic-halt = "1.0.0"
 rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }
+rtic-sync = { version = "1.4.0", features = ["defmt-03"] }
 stm32f4xx-hal = { version = "0.22.1", features = ["stm32f405"] }
