--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ panic-halt = "1.0.0"
 rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }
 rtic-sync = { version = "1.4.0", features = ["defmt-03"] }
 stm32f4xx-hal = { version = "0.22.1", features = ["stm32f405"] }
+heapless = "0.8.0"
