--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,8 @@ rtic-monotonics = { version = "2.1.0", features = [
   "defmt",
 ] }
 rtic-sync = { version = "1.4.0", features = ["defmt-03"] }
-stm32f4xx-hal = { version = "0.22.1", features = ["stm32f405", "defmt"] }
+stm32f4xx-hal = { git = "https://github.com/tommasoprandin/stm32f4xx-hal", branch = "support/qemu-olimexh405", features = [
+  "qemu-olimexh405",
+  "defmt",
+] }
 heapless = "0.8.0"
